# binsmasher

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml
cve_scanner/: __init__.py  analysis.py  auditor.py  catalog.py  cve_audit_sample.html  cve_scan.py  models.py  reporter.py  scoring.py  taint_analyzer.py
exploits/cve-2026-25994/: README.md  pjsip-cve-2026-25994.py
src/: analyzer.py  binsmasher_main.py  constants.py  exceptions.py  exploiter.py  file_exploiter.py  fuzzer.py  main.py  utils.py
src/analyzer/: __init__.py  angr_analysis.py  binary_info.py  cache.py  dynamic.py  libc_db.py  libc_fingerprint.py  library.py  protections.py  recovery.py  seccomp.py  seccomp_parser.py  static.py  vuln_detect.py
src/binsmasher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cve_scanner/: __init__.py  analysis.py  auditor.py  cve_audit_all_sample.json  cve_mitre_json_sample.json  cve_mitre_sample.md  cve_scan.py  reporter.py  scoring.py
src/exploiter/: __init__.py  arm64.py  aslr_bypass.py  brute_aslr.py  canary_leak.py  connection.py  format_string.py  format_string_advanced.py  fsop.py  gadgets.py  heap.py  heap_advanced.py  heap_groom.py  helpers.py  http_strategies.py  i386.py  interactive.py  multistage.py  offset.py  orchestrator.py  rop_chains.py  scripts.py  session.py  shellcode.py  strategy.py  udp_strategies.py  win_detector.py  windows.py
src/file_exploiter/: __init__.py  archives.py  audio.py  documents.py  images.py  scripts_fmt.py  web.py
src/fuzzer/: __init__.py  afl.py  boofuzz_fuzz.py  core_analysis.py  gdb_scripts.py  http.py  mutation.py  offset_roto.py  solana.py  template_utils.py  udp.py
src/utils/: __init__.py  _process.py  adaptive_timeout.py  config.py  display.py  json_output.py  logging_setup.py  progress.py  writeup.py
tests/: hermes_blockchain.sh  real_test_ctf_bin.py  test_suite.py
tests/bins/: t10_safestack  t11_heap_glibc234  t12_fmtstr_fullrelro  t13_heap_menu  t14_off_by_one  t15_canary_fmtstr  t1_stack_noprotect  t2_stack_nx  t3_stack_canary  t4_fmtstr  t5_heap  t6_64bit_nx  t7_cfi_vtable  t8_seccomp  t9_stripped  t_revshell  t_shellexec
tests/bins/_bs_work/: _bs_memdump.gdb  _bs_offset.gdb  crash_t1_stack_noprotect.py  crash_t6_64bit_nx.py  crash_t8_seccomp.py  exploit_t1_stack_noprotect.py  (+7 more)
tests/ctf_bins/: flag.txt
tests/src/: Makefile  t10_safestack.c  t11_heap_glibc234.c  t12_fmtstr_fullrelro.c  t13_heap_menu.c  t14_off_by_one.c  t15_canary_fmtstr.c  t1_stack_noprotect.c  t2_stack_nx.c  t3_stack_canary.c  t4_fmtstr.c  t5_heap.c  t6_64bit_nx.c  t7_cfi_vtable.c  t8_seccomp.c  t9_stripped.c  t_revshell.c  t_shellexec.c
