[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binsmasher"
version = "0.9.1"
description = "Ultimate Cross-Platform Binary Exploitation Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "ancientencoder" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pwntools>=4.12",
    "rich>=13",
    "capstone>=5.0",
    "pefile>=2023.2.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
fuzzing = [
    "boofuzz>=0.4",
    "frida-tools>=12",
]
analysis = [
    "angr>=9.2",
    "claripy>=9.2",
    "ropper>=1.13",
    "ROPgadget>=7",
]
dev = [
    "pytest>=7",
]

[project.scripts]
binsmasher = "main:main"
binscan = "cve_scanner.cve_scan:main"

[project.urls]
Homepage = "https://github.com/VABISMO/binsmasher"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
